<resources>
    <string name="app_name">Offline Notes</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes added yet!</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_sub_title">Enter Sub Title</string>
    <string name="enter_content">Enter Note</string>
    <string name="add">Add</string>
    <string name="confirm_delete">Are you sure you want to delete this entry?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>
